# azurlane-agent

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  pyproject.toml
docs/: ARCHITECTURE.md  NORTH_STAR.md  ROADMAP.md
docs/plans/: phase_0_login_tool_spec.md  phase_2_gemini_cli_plan.md  repo_split_migration_plan.md
docs/reference/: ALAS_CONFIG_REFERENCE.md  EXPERIMENTAL_MAP.md  MEOWFFICER_WORKFLOW.md  RETIREMENT_WORKFLOW.md  SYSTEM_MAP.md
mcp_server/: alas_mcp_server.py  log_parser.py  run_server.sh  server.py
tests/: conftest.py  test_adb_tools.py  test_alas_mcp.py  test_behavior.py  test_behavior_catalog.py  test_behavior_executor.py  test_behavior_integration.py  test_integration_mcp.py  test_ocr.py  test_screen_state.py  test_template_matching.py
tools/: ocr.py  screen_state.py  template_matching.py
tools/behavior/: catalog.py  executor.py  schema.py
